      checking the type of its argument. (\PR{17141})

      \item \code{print.factor()} no longer sets the class of the factor
      to \code{NULL}, which would violate a basic constraint of an S4
      object.

      \item \code{formatC(x, flag=f)} allows two new flags, and signals an
      error for invalid flags also in the case of character formatting.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.3.2 patched}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{rep(x, times)} and \code{rep.int(x, times)} now both
      work also when \code{times} is larger than the maximal integer.
      (\PR{16932})

      \item \code{vapply(x, *)} now works with long vectors \code{x}.
      (\PR{17174})

      \item \code{isS3method("is.na.data.frame")} and similar are
      correct now.  (\PR{17171})

      \item \code{grepRaw(<long>, <short>, fixed = TRUE)} now works,
      thanks to a patch by Mikko Korpela.  (\PR{17132})

      \item Package installation into a library where the package exists
      via symbolic link now should work wherever \code{\link{Sys.readlink}()}
      works, resolving \PR{16725}.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.3.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{extSoftVersion()} now reports the version (if any) of
      the \code{readline} library in use.

      \item The version of LAPACK included in the sources has been
      updated to 3.6.1, a bug-fix release including a speedup for the
      non-symmetric case of \code{eigen()}.

      \item Use \code{options(deparse.max.lines=)} to limit the number
      of lines recorded in \code{.Traceback} and other deparsing
      activities.

      \item \code{format(<AsIs>)} looks more regular, also for
      non-character atomic matrices.

      \item \code{abbreviate()} gains an option \code{named = TRUE}.

      \item The online documentation for package \pkg{methods} is
      extensively rewritten.  The goals are to simplify